# Stablecoin-dUSD-plutarch

./: plutarch-template.cabal
app/: Main.hs
compiled/: collateralValidator.plutus  dUSDMintingPolicy.plutus  oracleNFTMintingPolicy.plutus  priceFeedOracleValidator.plutus
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.5/: package.cache  plutarch-template-0.1.0.0-inplace.conf
src/: Collateral.hs  Minting.hs  OracleNFT.hs  PriceFeedOracle.hs  Utils.hs
