cabal-version:      3.0
name:               plutarch-template
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Darjan Fikic
maintainer:         d.fikic@icloud.com
category:           SmartContract
build-type:         Simple
extra-source-files: CHANGELOG.md

common lang
  ghc-options:
    -Werror -Wall -Wcompat -Wincomplete-uni-patterns
    -Wno-unused-do-bind -Wno-partial-type-signatures
    -Wmissing-export-lists -Wincomplete-record-updates
    -Wmissing-deriving-strategies -Wno-name-shadowing -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds -Wunused-do-bind

  default-extensions:
    NoFieldSelectors
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    QualifiedDo
    RankNTypes
    RecordWildCards
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns

  default-language:   GHC2021

library
  import:          lang
  exposed-modules: 
    OracleNFT
    Collateral
    Utils
    PriceFeedOracle
    Minting

  build-depends:
    , aeson
    , base
    , base16-bytestring
    , bytestring
    , cardano-binary
    , data-default
    , plutarch
    , plutarch-extra
    , liqwid-plutarch-extra
    , plutus-core
    , plutus-ledger-api
    , plutus-simple-model
    , plutus-tx
    , ply-core
    , ply-plutarch
    , serialise
    , text

  hs-source-dirs:  src

common dependencies
  build-depends:
    , aeson
    , aeson-pretty
    , base
    , base16-bytestring
    , bytestring
    , cardano-binary
    , cborg
    , data-default
    , directory
    , liqwid-plutarch-extra
    , plutarch
    , plutarch-extra
    , plutus-core
    , plutus-ledger-api
    , plutus-simple-model
    , plutus-tx
    , ply-core
    , ply-plutarch
    , serialise
    , text

executable plutarch-template
  import:         lang, dependencies
  main-is:        Main.hs

  -- Modules included in this executable, other than Main.
  other-modules: OracleNFT, Collateral, PriceFeedOracle, Minting, Utils

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends: plutarch-template
   

  hs-source-dirs: app, src
